[gd_scene load_steps=4 format=3 uid="uid://hd5k4hihs3yw"]

[ext_resource type="Script" path="res://scripts/Node2D.gd" id="1_blkk8"]
[ext_resource type="Texture2D" uid="uid://cptbyqq0hivku" path="res://assets/store.png" id="2_clwdf"]
[ext_resource type="Texture2D" uid="uid://brp1hfiadf2r3" path="res://assets/factory.png" id="3_ignhf"]

[node name="Node2D" type="Node2D"]
position = Vector2(0, 2)
script = ExtResource("1_blkk8")

[node name="Home" type="Node2D" parent="."]

[node name="Tree" type="Button" parent="Home"]
offset_left = 267.0
offset_top = 191.0
offset_right = 447.0
offset_bottom = 269.0
text = "Money"

[node name="Timer" type="Timer" parent="."]
process_mode = 3
autostart = true

[node name="Shop" type="Node2D" parent="."]
position = Vector2(720, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="Shop"]
offset_top = 186.0
offset_right = 720.0
offset_bottom = 1280.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Shop/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="store" type="VBoxContainer" parent="Shop/VBoxContainer/GridContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Shop/VBoxContainer/GridContainer/store"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="Shop/VBoxContainer/GridContainer/store"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture_normal = ExtResource("2_clwdf")
ignore_texture_size = true
stretch_mode = 0

[node name="factory" type="VBoxContainer" parent="Shop/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Shop/VBoxContainer/GridContainer/factory"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="factory" type="Button" parent="Shop/VBoxContainer/GridContainer/factory"]
layout_mode = 2
size_flags_vertical = 3
text = "
"
flat = true

[node name="TextureRect" type="TextureRect" parent="Shop/VBoxContainer/GridContainer/factory/factory"]
layout_mode = 0
offset_left = 81.0
offset_top = 4.0
offset_right = 285.0
offset_bottom = 198.0
texture = ExtResource("3_ignhf")
expand_mode = 1

[node name="store2" type="VBoxContainer" parent="Shop/VBoxContainer/GridContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Shop/VBoxContainer/GridContainer/store2"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="store" type="Button" parent="Shop/VBoxContainer/GridContainer/store2"]
layout_mode = 2
text = "
"
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Shop/VBoxContainer/GridContainer/store2/store"]
layout_mode = 0
offset_left = 79.0
offset_top = 4.0
offset_right = 386.0
offset_bottom = 296.0
texture = ExtResource("2_clwdf")
expand_mode = 1

[node name="factory2" type="VBoxContainer" parent="Shop/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Shop/VBoxContainer/GridContainer/factory2"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="factory" type="Button" parent="Shop/VBoxContainer/GridContainer/factory2"]
layout_mode = 2
size_flags_vertical = 3
text = "
"
flat = true

[node name="TextureRect" type="TextureRect" parent="Shop/VBoxContainer/GridContainer/factory2/factory"]
layout_mode = 0
offset_left = 34.0
offset_top = 11.0
offset_right = 311.0
offset_bottom = 274.0
texture = ExtResource("3_ignhf")
expand_mode = 1

[node name="store3" type="VBoxContainer" parent="Shop/VBoxContainer/GridContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Shop/VBoxContainer/GridContainer/store3"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="store" type="Button" parent="Shop/VBoxContainer/GridContainer/store3"]
layout_mode = 2
text = "
"
flat = true
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Shop/VBoxContainer/GridContainer/store3/store"]
layout_mode = 0
offset_left = 79.0
offset_top = 4.0
offset_right = 283.0
offset_bottom = 198.0
texture = ExtResource("2_clwdf")
expand_mode = 1

[node name="factory3" type="VBoxContainer" parent="Shop/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Shop/VBoxContainer/GridContainer/factory3"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="factory" type="Button" parent="Shop/VBoxContainer/GridContainer/factory3"]
layout_mode = 2
size_flags_vertical = 3
text = "
"
flat = true

[node name="TextureRect" type="TextureRect" parent="Shop/VBoxContainer/GridContainer/factory3/factory"]
layout_mode = 0
offset_left = 81.0
offset_top = 4.0
offset_right = 285.0
offset_bottom = 198.0
texture = ExtResource("3_ignhf")
expand_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="MenuBar" type="MenuBar" parent="Camera2D"]
clip_contents = true
offset_left = -358.0
offset_top = 597.0
offset_right = 358.0
offset_bottom = 637.0

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/MenuBar"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 719.0
offset_bottom = 42.0
alignment = 1

[node name="Finance" type="MenuButton" parent="Camera2D/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Finance"
switch_on_hover = true

[node name="Home" type="MenuButton" parent="Camera2D/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Home"
switch_on_hover = true

[node name="Shop" type="MenuButton" parent="Camera2D/MenuBar/HBoxContainer"]
layout_mode = 2
text = "Shop
"
switch_on_hover = true

[node name="GUI" type="HBoxContainer" parent="Camera2D"]
clip_contents = true
layout_direction = 1
offset_left = -360.0
offset_top = -642.0
offset_right = 360.0
offset_bottom = -574.0
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="Camera2D/GUI"]
layout_mode = 2
text = "0 â‚¬"
horizontal_alignment = 1

[connection signal="pressed" from="Home/Tree" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Shop/VBoxContainer/GridContainer/store/TextureButton" to="." method="_buy_building" binds= ["store"]]
[connection signal="pressed" from="Shop/VBoxContainer/GridContainer/factory/factory" to="." method="_buy_building" binds= ["factory"]]
[connection signal="pressed" from="Shop/VBoxContainer/GridContainer/store2/store" to="." method="_buy_building"]
[connection signal="pressed" from="Shop/VBoxContainer/GridContainer/factory2/factory" to="." method="_buy_building"]
[connection signal="pressed" from="Shop/VBoxContainer/GridContainer/store3/store" to="." method="_buy_building"]
[connection signal="pressed" from="Shop/VBoxContainer/GridContainer/factory3/factory" to="." method="_buy_building"]
[connection signal="pressed" from="Camera2D/MenuBar/HBoxContainer/Finance" to="." method="_on_finance_pressed"]
[connection signal="pressed" from="Camera2D/MenuBar/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Camera2D/MenuBar/HBoxContainer/Shop" to="." method="_on_shop_pressed"]
